<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE2CD"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logologin"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logologin22"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppin"
        android:lineSpacingExtra="0sp"
        android:text="@string/come_and_join_us_to_be_a_foundna_expert"
        android:textAlignment="textStart"
        android:textColor="#EEF5C0"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="110dp"
        android:layout_below="@id/logologin"
        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logologin"
        app:srcCompat="@drawable/kelelawarremovebg"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="0dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rv_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Username"
            android:paddingStart="16dp"
            android:textColor="#898989"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/rv_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Email"
            android:paddingStart="16dp"
            android:textColor="#898989"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/password"
            android:paddingStart="16dp"
            android:textColor="#898989"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/repw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:paddingStart="16dp"
            android:textColor="#898989"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_bg"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/already_have_account"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:textColor="#24613B"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>